--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,9 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"require-dev": {
+		"fzaninotto/faker": "^1.5",
+		"way/generators": "^3.0"
+	}
 }
