--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "4.2.*",
 		"components/jquery": "*",
 		"twbs/bootstrap": "*",
-		"geoip2/geoip2": "~2.0"
+		"geoip2/geoip2": "~2.0",
+		"league/commonmark": "^0.8.0"
 	},
 	"autoload": {
 		"classmap": [
